# Python_Laba_2

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: DateTime.py  command_cat.py  command_cd.py  command_cp.py  command_grep.py  command_ls.py  command_mv.py  command_rm.py  logging_in_shell.py  main.py
tests/negative/: test_negative_cat.py  test_negative_cd.py  test_negative_cp.py  test_negative_grep.py  test_negative_ls.py  test_negative_mv.py  test_negative_rm.py
tests/positive/: test_positive_cat.py  test_positive_cd.py  test_positive_cp.py  test_positive_grep.py  test_positive_ls.py  test_positive_mv.py  test_positive_rm.py
